part1/main-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-main-app-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-main-app
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
