part1/main-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-main-app-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: dwk-main-app-svc
            port:
             number: 2345
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: dwk-ping-pong-app-svc
            port:
             number: 2345
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: dwk-project-app-svc
            port:
             number: 2345
